@@ -1,3 +1,7 @@
+Tue Oct 27 21:20:35 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/lib/tk/variable.rb: add TkVariable#+@ and -@ method.
+
 Tue Oct 27 08:56:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* mkconfig.rb: reverted r25443 because build_os is used in mkmf.rb
